env/code_53ed185a21970/stderr.txt
  File "main.py", line 12
    return isSubset(arr,n-1,sum)||isSubset(arr,n-1,sum-arr[n-1])
                                 ^
SyntaxError: invalid syntax
